# agentic-saul

./: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  REPORT.md  app.py  fine_tune_emb_and_eval.ipynb  pyproject.toml
finetune_data/: test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
saul/: graph.py  tools.py
